# obce

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
codegen/src/: id.rs  implementation.rs  lib.rs  mock.rs  utils.rs
examples/rand-extension/: Cargo.toml  README.md  lib.rs
examples/rand-extension/chain-extension/: Cargo.toml
examples/rand-extension/chain-extension/src/: substrate.rs
macro/src/: lib.rs
src/: codegen.rs  lib.rs
src/substrate/: mod.rs
tests/: environment.rs
tests/e2e/contract/: Cargo.toml  lib.rs
tests/ui/substrate/id/: fail_empty_path.rs  fail_empty_path.stderr  fail_incorrect_path.rs  fail_incorrect_path.stderr
