[package]
name = "rand-extension"
edition = "2021"
version = "0.1.0"

[dependencies]
obce = { git = "https://github.com/727-Ventures/obce", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

ink = { version = "4.2.0", default-features = false, optional = true }

pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", default-features = false, optional = true }

[features]
default = ["std"]
substrate = [
    "obce/substrate",
    "pallet-insecure-randomness-collective-flip"
]
ink = [
    "obce/ink",
    "dep:ink",
]
std = [
    "scale-info/std",
    "scale/std",
    "obce/std"
]
substrate-std = [
    "std",
    "substrate",
    "obce/substrate-std",
    "pallet-insecure-randomness-collective-flip/std"
]
ink-std = [
    "std",
    "ink",
    "ink/std",
    "obce/ink-std",
]
