[package]
name = "contract"
edition = "2021"
version = "0.1.0"
authors = ["name <email>"]

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

ink = { version = "4.2.0", default-features = false }

chain-extension = { path = "../../../obce-test-environment/chain-extension", default-features = false, features = ["ink"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "chain-extension/ink-std",
]
ink-as-dependency = []
